--- a/popup/histcontext.html
+++ b/popup/histcontext.html
@@ -2,52 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <style>
-      body {
-          font-family: system-ui;
-      }
-      @media (prefers-color-scheme: dark) {
-	  body {
-	      background-color: #333;
-	      color: white;
-	      color-scheme: dark;
-	  }
-      }
-      input#search {
-	  width: 100%;
-      }
-      table#results, table#context {
-	  table-layout: fixed;
-	  width: 750px;
-	  border-collapse: collapse;
-      }
-      td {
-	  overflow: hidden;
-	  white-space: nowrap;
-	  text-overflow: clip;
-      }
-      tbody > tr:hover {
-	  background-color: #eee;
-      }
-      tbody > tr.selected {
-	  background-color: #ddd;
-      }
-      @media (prefers-color-scheme: dark) {
-	  tbody > tr:hover {
-	      background-color: #555;
-	  }
-	  tbody > tr.selected {
-	      background-color: #777;
-	  }
-      }
-      a {
-	  color: inherit;
-	  text-decoration: none;
-      }
-      a:hover {
-	  text-decoration: underline;
-      }
-    </style>
+    <link rel="stylesheet" href="histcontext.css">
   </head>
   <body>
     <div id="searchview">
