first attempt at showing referer

--- a/popup/histcontext.html
+++ b/popup/histcontext.html
@@ -37,8 +37,22 @@
       </tr>
     </template>
     <div id="contextview" style="display: none;">
-      <button id="backbutton">&blacktriangleleft;</button>
-      <span>Viewing context:</view>
+      <div>
+	<button id="backbutton">&blacktriangleleft;</button>
+	<strong>Viewing context</strong>
+      </div>
+      <span>Details:</span>
+      <table id="details">
+	<tr>
+	  <th>Transition type</th>
+	  <th>Referer</th>
+	</tr>
+	<tr>
+	  <td></td>
+	  <td></td>
+	</tr>
+      </table>
+      <span>Context:</span>
       <table id="context">
 	<thead>
 	  <tr>
